--- a/hugo.yaml
+++ b/hugo.yaml
@@ -78,8 +78,8 @@ params:
     Content: "道阻且长 行则将至"
 
   socialIcons:
-    - name: gitlab
-      url: "https://gitlab.com/rainysun22"
+    # - name: gitlab
+    #   url: "https://gitlab.com/rainysun22"
     - name: gitee
       url: "https://gitee.com/rainysun22"
     - name: github
